force-app/main/default/objects/Customer_Review__c/Customer_Review__c.object-meta.xml
<CustomObject>
    <label>Customer Review</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>