force-app/main/default/objects/Customer_Review__c/fields/person__c.field-meta.xml
<CustomField>
    <fullName>person__c</fullName>
    <label>person</label>
    <length>20</length>
    <type>Text</type>
</CustomField>